--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "recompose": "^0.30.0",
     "sharp": "^0.23.1",
     "superagent": "^5.1.0",
     "typeface-varela-round": "0.0.71",
