--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sharp": "^0.23.1",
     "superagent": "^5.1.0",
     "typeface-varela-round": "0.0.71",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
