Big re-factor of the item page structure and components

--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "material-ui-dropzone": "^2.4.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "notistack": "^0.9.0",
+    "pure-react-carousel": "^1.23.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-image-gallery": "^0.9.1",
     "react-material-ui-form": "^1.1.4",
+    "react-redux": "^7.1.1",
     "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "recompose": "^0.30.0",
+    "redux": "^4.0.4",
     "sharp": "^0.23.1",
     "superagent": "^5.1.0",
     "typeface-varela-round": "0.0.71",
