--- a/package.json
+++ b/package.json
@@ -3,38 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/core": "^1.3.11",
-    "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.1",
-    "@material-ui/pickers": "^3.2.6",
-    "@unicef/material-ui-currency-textfield": "^0.8.3",
-    "date-fns": "^2.4.1",
+    "@date-io/core": "^1.3.13",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.9.11",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
+    "date-fns": "^2.12.0",
     "formik": "^1.5.8",
     "image-thumbnail": "^1.0.4",
     "js-cookie": "^2.2.1",
     "jss": "^9.8.7",
     "material-ui": "^1.0.0-beta.46",
-    "material-ui-dropzone": "^2.4.1",
+    "material-ui-dropzone": "^2.5.0",
     "material-ui-icons": "^1.0.0-beta.36",
-    "notistack": "^0.9.0",
-    "pure-react-carousel": "^1.23.0",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.8.6",
+    "notistack": "^0.9.10",
+    "pure-react-carousel": "^1.27.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
     "react-image-gallery": "^0.9.1",
-    "react-material-ui-form": "^1.1.4",
-    "react-redux": "^7.1.1",
-    "react-responsive-carousel": "^3.1.50",
+    "react-material-ui-form": "^1.1.7",
+    "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "recompose": "^0.30.0",
-    "redux": "^4.0.4",
-    "sharp": "^0.23.1",
-    "superagent": "^5.1.0",
+    "redux": "^4.0.5",
+    "sharp": "^0.23.4",
+    "superagent": "^5.2.2",
     "typeface-varela-round": "0.0.71",
-    "typescript": "^3.6.3",
-    "uuid": "^3.3.3"
+    "typescript": "^3.8.3",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
